New update 4.0 (fixed and added) Resolve problem with CORS by added proxy Remove some unnecessary files Rename some files Remake some classes components to functional components Added page AllFilmsPage.jsx Added page AllUsersPage.jsx Added page AboutFilmPage.jsx Fixed bug in SignInModal.jsx with values Added opportunity get all users and films for admin Added opportunity to find by params needed user Refactoring and optimized imports

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-rating-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8088",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
