--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^7.2.5",
     "react-router-config": "^5.1.1",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
