--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-js-pagination": "^3.0.3",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.5",
     "react-router-config": "^5.1.1",
