New update 4.3 (fixed and news) Refactoring and optimized Fixed bugs Renamed api urls Remade Links Remade spinner animation Made create/update film with dialog through redux Removed a lot of unused lines of code and variables

--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^17.0.2",
+    "react-file-picker": "0.0.6",
     "react-icons": "^4.2.0",
     "react-js-pagination": "^3.0.3",
+    "react-loading": "^2.0.3",
+    "react-multi-carousel": "^2.6.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.5",
     "react-router-config": "^5.1.1",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.3.0",
+    "react-slideshow-image": "^3.6.0",
+    "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
