--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/react": "^17.0.19",
     "@types/react-transition-group": "^4.4.2",
+    "image-to-base64": "^2.2.0",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^17.0.2",
-    "react-file-picker": "0.0.6",
     "react-icons": "^4.2.0",
     "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
@@ -30,6 +30,7 @@
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "use-file-picker": "^1.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
