--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^17.0.19",
     "@types/react-transition-group": "^4.4.2",
     "image-to-base64": "^2.2.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.1",
